# ChangeLog for vmware overlay
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  24 May 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/open-vm-tools/files/default-scripts.patch:
  Add in initial patch for default scripts.

  24 May 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/open-vm-tools/open-vm-tools-0.0.20080515.93241.ebuild:
  Bump open-vm-tools version.

  22 May 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-workstation/files/6.5.0.91182/000_all_initd-location
  .patch,
  +app-emulation/vmware-workstation/files/6.5.0.91182/001_all_fix-permission
  s.patch,
  +app-emulation/vmware-workstation/files/6.5.0.91182/002_all_pagebreak-dete
  ction-fix.patch,
  +app-emulation/vmware-workstation/files/6.5.0.91182/004_all_do-not-build-m
  odules.patch,
  +app-emulation/vmware-workstation/files/6.5.0.91182/007_all_use-modprobe-o
  ver-insmod.patch,
  +app-emulation/vmware-workstation/files/6.5.0.91182/009_all_init.d-modules
  -warning.patch,
  +app-emulation/vmware-workstation/files/6.5.0.91182/011_all_legit-modules-
  only.patch:
  Version bump vmware-workstation-6.5.0.

  26 Apr 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-workstation/vmware-workstation-5.5.5.56455.ebuild,
  app-emulation/vmware-workstation/vmware-workstation-5.5.6.80404.ebuild,
  app-emulation/vmware-workstation/vmware-workstation-6.0.2.59824.ebuild,
  app-emulation/vmware-workstation/vmware-workstation-6.0.3.80004.ebuild:
  Sync vmware-workstation up with the tree.

  26 Apr 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-workstation-tools/files/5.5.1/000_all_initd-scripts.
  patch,
  -app-emulation/vmware-workstation-tools/files/5.5.2/000_all_initd-scripts.
  patch,
  -app-emulation/vmware-workstation-tools/files/5.5.3/000_all_initd-scripts.
  patch,
  -app-emulation/vmware-workstation-tools/files/6.0.0.45731/000_all_vmware-t
  ools.patch, -app-emulation/vmware-workstation-tools/files/90vmware-tools,