@@ -10,8 +10,8 @@ AUX patches/vmnet/021_all_wireless_fix.patch 668 RMD160 dbcd47fc4749b36417d028a5
 AUX patches/vmnet/025_all_kernel-2.6.25.patch 939 RMD160 c7f9f0b9e7bf98b4b37db70926c1c463874e8458 SHA1 43f8f9a5a0b9a28223ad901afd5b45749447bdc4 SHA256 a3247b261376f7cde78724d5704c4ea2511d54644f9c2b776b41f19d261cba17
 DIST VMware-server-e.x.p-63231.i386.tar.gz 369654030 RMD160 7a702a1b5c4838696abccae79edcfe4265e1178a SHA1 a155b0c17951b4bb629013fc4dd1bec4ad368b3a SHA256 8c56b6397e05d02c31adabee69ae1965cb6de545f7a0b5bb23cb020215c698d1
 DIST VMware-server-e.x.p-63231.x86_64.tar.gz 340199772 RMD160 a6cfb9776300b4ab09c5bf17bc3ce6769df0a1b0 SHA1 bfd566a06b5269266bbf92a7293b77a438a35d1d SHA256 0a7197044f40985c75cd3dd912a87e150daef10fb187d75a1026a8aa5f9ceed9
-DIST VMware-workstation-e.x.p-84113.i386.tar.gz 307755709 RMD160 69a3614bfe5ee65380d0e86b72b5d9e2e272b6ea SHA1 312d88c42be24f6c46d4df87eeb6a20c89a0cd86 SHA256 e4bcec738c5e93de2848819524ee704e399d1d1e6e8a318621a4d0c07550acc1
-DIST VMware-workstation-e.x.p-84113.x86_64.tar.gz 278992270 RMD160 0eed636e79457300988bacbbee5b5eed3fd4d5b5 SHA1 abc46ac1ce37e97feb4f062b3f4fd1af6792cc69 SHA256 0d27031886dee8956e14319aa5ef2c0d19e33368b7f61c310141b2c350324ca9
+DIST VMware-workstation-e.x.p-91182.i386.tar.gz 346214069 RMD160 abba9a0e93556b641f2484b00cf992e55f12a70f SHA1 4b468cf6873f0096a44bc6fdbeb11d05e737c758 SHA256 566ca3b933467819da1f16c3788ceabc583b04fc02fc4bb83f7bb019e5448d9c
+DIST VMware-workstation-e.x.p-91182.x86_64.tar.gz 317455357 RMD160 83dbc194ea5a3702857c16c310b58e0f2eeaad2b SHA1 84fd9f52909f681a0cd4b216b3a876dcc308e0ab SHA256 abe961fdcfef4748720f5d81982ef903dc3b0ef913e48c944af5b66fb0936e2d
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
 EBUILD vmware-modules-1.0.0.11-r1.ebuild 310 RMD160 7748b52659054c3b5b29181cbb35083eee30158a SHA1 7f20b5bb8808761897ccc8c395f6ee3e9d10065e SHA256 e897d58dd5b68ede4c58f02d2702dcdd0b85b16726bd8b4ec04e28a73ada8b7f
 EBUILD vmware-modules-1.0.0.13-r1.ebuild 309 RMD160 5e9267a28aaa0c36a61afc38110dd8f29f5f0df2 SHA1 7145a3756274c6617de84c058d79ebe77b2a637c SHA256 4a394b382a44026957253b802c2be37ccfd980048b7e68e344859861ad292d5f
@@ -19,5 +19,5 @@ EBUILD vmware-modules-1.0.0.15-r1.ebuild 311 RMD160 910dd70caac0af5c1bdb6d714b96
 EBUILD vmware-modules-1.0.0.16-r1.ebuild 350 RMD160 1be5daf6e1bbf0a83dace59330e327d628624cde SHA1 5c77c28e8449d3c1a9be5fef18a3f0efafcfbd51 SHA256 191e9998c8351111566e9e2dc68ac5e20f6dd48b6ad1998eb60403b7334158bc
 EBUILD vmware-modules-1.0.0.17-r1.ebuild 459 RMD160 2ef0f8d190cec299cccf440e7cc53aea95000f1d SHA1 86d85a23f0574a33da06309e8d470b89ceff5fac SHA256 0701e46f0b3cf2fb1bbc20d3b3eb8a6be680889ed3bcc8c06aa8e905a9be74fb
 EBUILD vmware-modules-1.0.0.18.ebuild 621 RMD160 cded1e0eb365ce53e41054320850293f2f4d2d0d SHA1 f38941824506ee4024940a01394d6da9a108e28b SHA256 f89c7d3eae7ce74743094b75883faad058946d54ba861f3fe39c5b363c271309
-EBUILD vmware-modules-1.0.0.19.ebuild 799 RMD160 1b397b6783c5f0407790cef078f576339e1f6e7b SHA1 33fbcc7f2b984a47e075a0c6188ee46414d89aae SHA256 32be05eab1f00a8c2e3548486dbdb43c2b052209e37bc70e55cf08a3c5a52c2c
+EBUILD vmware-modules-1.0.0.19.ebuild 791 RMD160 639f5a629f295de9bcd3c2e9ddd0cfbe65c0f342 SHA1 24d8b1949bddbef88cdc410343ac916347bd6d19 SHA256 7dbc6f0263fb541edad2943b363e783b6a42adde887833a3b478d86e5382c259
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
