@@ -1,4 +1,4 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/app-emulation/vmware-modules/vmware-modules-1.0.0.17.ebuild,v 1.3 2007/11/25 12:43:20 ikelos Exp $
 
@@ -8,8 +8,8 @@ VMWARE_VER="VME_V65" # THIS VALUE IS JUST A PLACE HOLDER
 inherit eutils vmware-mod
 
 VMWARE_MODULE_LIST="vmmon vmnet vmblock vmci vsock"
-SRC_URI="x86? ( mirror://vmware/software/vmserver/VMware-workstation-e.x.p-84113.i386.tar.gz )
-		 amd64? ( mirror://vmware/software/vmserver/VMware-workstation-e.x.p-84113.x86_64.tar.gz )"
+SRC_URI="x86? ( mirror://vmware/software/wkst/VMware-workstation-e.x.p-91182.i386.tar.gz )
+		 amd64? ( mirror://vmware/software/wkst/VMware-workstation-e.x.p-91182.x86_64.tar.gz )"
 VMWARE_MOD_DIR="vmware-distrib/lib/modules/source/"
 
 src_unpack() {
