@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  27 May 2008; Mike Auty <ikelos@gentoo.org>
+  app-emulation/vmware-modules/vmware-modules-1.0.0.19.ebuild:
+  Fix up the vmware-modules-1.0.0.19 SRC_URI.
+
   24 May 2008; Mike Auty <ikelos@gentoo.org>
   +app-emulation/open-vm-tools/files/default-scripts.patch:
   Add in initial patch for default scripts.
